--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-     <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6">
-         <div class="card">
+     <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
+         <div class="card border-dark">
              <img class="image-top" [src]="gif.images.downsized_medium.url" [alt]="gif.title">
              <div class="card-body">
                  <p class="card-text">
