--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,11 +1,23 @@
 <div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">
+    <h3 class="text-light text-center">
         Gifs-App
     </h3>
     <hr class="text-white">
-    <div class="list-group list-reset">
-        <a *ngFor="let item of historial" href="#" class="list-group-item list-group-item-action">
+    <div>
+        <button 
+            class="btn btn-dark"
+            (click)="borrarHistorial()"
+        >
+            Limpiar historial
+        </button>
+    </div>
+    <div class="btn-group-vertical btn-group-lg">
+        <button 
+            *ngFor="let item of historial"
+            class="btn btn-primary"
+            (click)="buscar(item)"
+        >
             {{ item | titlecase }}
-        </a>
+        </button>
     </div>
 </div>
